--- a/template/package.json
+++ b/template/package.json
@@ -7,7 +7,10 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest --verbose",
+    "coverage": "jest --coverage",
+    "prepare": "husky install",
+    "commit": "npx git-cz"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -29,6 +32,16 @@
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "yarn lint --fix"
+    ]
   },
   "engines": {
     "node": ">=16"
