--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "react-native-template",
+  "name": "@gbrlcoelho/react-native-boilerplate",
   "version": "0.0.1",
   "description": "React Native Template",
-  "repository": "git@github.com:gbrlcoelho/react-native-template.git",
+  "repository": "git@github.com:gbrlcoelho/rn-boilerplate.git",
   "author": "Gabriel Coelho <coelhogabriel67@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "react",
+    "native",
+    "boilerplate",
+    "react-native",
+    "starter-kit"
+  ]
 }
