chore: added keywords

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@gbrlcoelho/react-native-boilerplate",
   "version": "0.0.1",
   "description": "React Native Template",
-  "repository": "git@github.com:gbrlcoelho/rn-boilerplate.git",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/gbrlcoelho/rn-boilerplate.git"
+  },
   "author": "Gabriel Coelho <coelhogabriel67@gmail.com>",
   "license": "MIT",
   "keywords": [
@@ -11,5 +14,13 @@
     "boilerplate",
     "react-native",
     "starter-kit"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/gbrlcoelho/rn-boilerplate/issues"
+  },
+  "homepage": "https://github.com/gbrlcoelho/rn-boilerplate#readme",
+  "main": "script.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
