--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gbrlcoelho/react-native-boilerplate",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "description": "React Native Boilerplate",
   "repository": {
     "type": "git",
@@ -20,7 +20,5 @@
   },
   "homepage": "https://github.com/gbrlcoelho/rn-boilerplate#readme",
   "main": "script.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  "scripts": {}
 }
