--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gbrlcoelho/react-native-boilerplate",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React Native Boilerplate",
   "repository": {
     "type": "git",
@@ -14,6 +14,9 @@
     "boilerplate",
     "react-native",
     "starter-kit"
+  ],
+  "files": [
+    ".gitignore"
   ],
   "bugs": {
     "url": "https://github.com/gbrlcoelho/rn-boilerplate/issues"
