--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gbrlcoelho/react-native-boilerplate",
-  "version": "1.0.6",
+  "version": "2.0.0",
   "description": "React Native Boilerplate",
   "repository": {
     "type": "git",
@@ -25,8 +25,5 @@
   },
   "homepage": "https://github.com/gbrlcoelho/rn-boilerplate#readme",
   "main": "script.js",
-  "scripts": {},
-  "dependencies": {
-    "chalk": "^5.3.0"
-  }
+  "scripts": {}
 }
