--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gbrlcoelho/react-native-boilerplate",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "React Native Boilerplate",
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   ],
   "files": [
     "template",
+    "template/.gitignore",
     "template.config.js"
   ],
   "bugs": {
