--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,17 +15,23 @@ jobs:
 
       - name: Calculate new tag
         id: newtag
-        run: echo ::set-output name=NEW_TAG::$(echo $(($(git describe --tags $(git rev-list --tags --max-count=1) | tr -dc '0-9')+1)))
+        run: |
+          LAST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null)
+          if [ "$?" -ne 0 ]; then
+            echo "NEW_TAG=1.0.0" >> $GITHUB_ENV
+          else
+            echo "NEW_TAG=$(echo $LAST_TAG | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')" >> $GITHUB_ENV
+          fi
 
       - name: Create new tag
         uses: actions/github-script@v3
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{secrets.RN_BOILERPLATE}}
           script: |
             github.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: 'refs/tags/${{ steps.newtag.outputs.NEW_TAG }}',
+              ref: 'refs/tags/${{ env.NEW_TAG }}',
               sha: context.sha
             })
 
@@ -33,9 +39,9 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RN_BOILERPLATE }}
         with:
-          tag_name: ${{ steps.newtag.outputs.NEW_TAG }}
-          release_name: Release ${{ steps.newtag.outputs.NEW_TAG }}
+          tag_name: ${{ env.NEW_TAG }}
+          release_name: Release ${{ env.NEW_TAG }}
           draft: false
           prerelease: false
