--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,28 +12,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
 
       - name: Calculate new tag
         id: newtag
-        run: |
-          LAST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null)
-          if [ "$?" -ne 0 ]; then
-            echo "NEW_TAG=1.0.0" >> $GITHUB_ENV
-          else
-            echo "NEW_TAG=$(echo $LAST_TAG | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')" >> $GITHUB_ENV
-          fi
+        run: echo ::set-output name=NEW_TAG::$(echo $(($(git describe --tags $(git rev-list --tags --max-count=1) | tr -dc '0-9')+1)))
 
       - name: Create new tag
         uses: actions/github-script@v3
         with:
-          github-token: ${{secrets.RN_BOILERPLATE}}
+          github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             github.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: 'refs/tags/${{ env.NEW_TAG }}',
+              ref: 'refs/tags/${{ steps.newtag.outputs.NEW_TAG }}',
               sha: context.sha
             })
 
@@ -41,9 +33,9 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.RN_BOILERPLATE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.NEW_TAG }}
-          release_name: Release ${{ env.NEW_TAG }}
+          tag_name: ${{ steps.newtag.outputs.NEW_TAG }}
+          release_name: Release ${{ steps.newtag.outputs.NEW_TAG }}
           draft: false
           prerelease: false
