--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,19 +15,20 @@ jobs:
 
       - name: Calculate new tag
         id: newtag
-        run: echo ::set-output name=NEW_TAG::$(echo $(($(git describe --tags $(git rev-list --tags --max-count=1) | tr -dc '0-9')+1)))
+        run: echo ::set-output name=NEW_TAG::$(($(git describe --tags --abbrev=0 | tr -dc '0-9')+1))
 
       - name: Create new tag
         uses: actions/github-script@v3
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
+            const newTag = `refs/tags/${{ steps.newtag.outputs.NEW_TAG }}`;
             github.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: 'refs/tags/${{ steps.newtag.outputs.NEW_TAG }}',
+              ref: newTag,
               sha: context.sha
-            })
+            });
 
       - name: Create Release
         id: create_release
@@ -39,3 +40,6 @@ jobs:
           release_name: Release ${{ steps.newtag.outputs.NEW_TAG }}
           draft: false
           prerelease: false
+          body: |
+            Release ${{ steps.newtag.outputs.NEW_TAG }}
+            - Add release notes and details here.
