--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,8 @@ jobs:
           LAST_TAG=$(git describe --tags --abbrev=0)
           NEW_TAG=$(node -e "console.log(require('./package.json').version)")
           CHANGELOG=$(git log --pretty=format:"%h - %s (%an)" $LAST_TAG..HEAD)
-          RELEASE_NOTES="**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG\n\n$CHANGELOG"
-          printf "::set-output name=RELEASE_NOTES::%s" "$RELEASE_NOTES"
+          RELEASE_NOTES=$(printf "**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG\n\n$CHANGELOG")
+          echo ::set-output name=RELEASE_NOTES::"$RELEASE_NOTES"
 
       - name: Create new tag
         uses: actions/github-script@v3
