--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,10 @@ jobs:
           LAST_TAG=$(git describe --tags --abbrev=0)
           NEW_TAG=$(node -e "console.log(require('./package.json').version)")
           CHANGELOG=$(git log --pretty=format:"%h - %s (%an)" $LAST_TAG..HEAD)
-          RELEASE_NOTES=$(printf "**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG\n\n$CHANGELOG")
-          echo "RELEASE_NOTES=$RELEASE_NOTES" >> $GITHUB_ENV
+          RELEASE_NOTES="**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG\n\n$CHANGELOG"
+          echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
+          echo "$RELEASE_NOTES" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: Set output
         id: set_output
@@ -54,6 +56,6 @@ jobs:
         with:
           tag_name: ${{ steps.newtag.outputs.NEW_TAG }}
           release_name: ${{ steps.newtag.outputs.NEW_TAG }}
-          body: ${{ steps.set_output.outputs.RELEASE_NOTES }}
+          body: ${{ env.RELEASE_NOTES }}
           draft: false
           prerelease: false
