--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,13 +27,7 @@ jobs:
           NEW_TAG=$(node -e "console.log(require('./package.json').version)")
           CHANGELOG=$(git log --pretty=format:"%h - %s (%an)" $LAST_TAG..HEAD)
           RELEASE_NOTES="**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG"
-          echo "RELEASE_NOTES<<EOF<<EOF" >> $GITHUB_ENV
-          echo "$RELEASE_NOTES<<EOF$CHANGELOG" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-
-      - name: Set output
-        id: set_output
-        run: echo ::set-output name=RELEASE_NOTES::"$RELEASE_NOTES"
+          echo ::set-outout name=RELEASE_NOTES::$RELEASE_NOTES
 
       - name: Create new tag
         uses: actions/github-script@v3
@@ -56,6 +50,6 @@ jobs:
         with:
           tag_name: ${{ steps.newtag.outputs.NEW_TAG }}
           release_name: ${{ steps.newtag.outputs.NEW_TAG }}
-          body: ${{ env.RELEASE_NOTES }}
+          body: ${{ steps.releasenotes.outputs.RELEASE_NOTES }}
           draft: false
           prerelease: false
