ci: release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           CHANGELOG=$(git log --pretty=format:"%h - %s (%an)" $LAST_TAG..HEAD)
           RELEASE_NOTES="**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG"
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
-          echo "$RELEASE_NOTES\n\n$CHANGELOG" >> $GITHUB_ENV
+          echo "$RELEASE_NOTES" "EOF" "$CHANGELOG<<EOF" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
       - name: Create new tag
