--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,13 +26,17 @@ jobs:
       - name: Generate release notes and changelog
         env:
           NEW_TAG: ${{ env.NEW_TAG }}
+          RELEASE_NOTES: ${{ env.RELEASE_NOTES }}
+          CHANGELOG: ${{ env.CHANGELOG }}
         run: |
           LAST_TAG=$(git describe --tags --abbrev=0)
           NEW_TAG=${{ env.NEW_TAG }}
           CHANGELOG=$(git log --pretty=format:"%h - %s (%an)" $LAST_TAG..HEAD)
           RELEASE_NOTES="**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG"
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
-          echo "$RELEASE_NOTES" "$CHANGELOG>>EOF" >> $GITHUB_ENV
+          echo "${{ env.RELEASE_NOTES }}" >> $GITHUB_ENV
+          echo "" >> $GITHUB_ENV
+          echo "${{ env.CHANGELOG }}" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
       - name: Create new tag
