ci: release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,23 +26,19 @@ jobs:
       - name: Generate release notes and changelog
         env:
           NEW_TAG: ${{ env.NEW_TAG }}
-          RELEASE_NOTES: ${{ env.RELEASE_NOTES }}
-          CHANGELOG: ${{ env.CHANGELOG }}
         run: |
           LAST_TAG=$(git describe --tags --abbrev=0)
           NEW_TAG=${{ env.NEW_TAG }}
           CHANGELOG=$(git log --pretty=format:"%h - %s (%an)" $LAST_TAG..HEAD)
-          RELEASE_NOTES="**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG"
+          RELEASE_NOTES="**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG\n\n$CHANGELOG"
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
-          echo "${{ env.RELEASE_NOTES }}" >> $GITHUB_ENV
-          echo "" >> $GITHUB_ENV
-          echo "${{ env.CHANGELOG }}" >> $GITHUB_ENV
+          echo "$RELEASE_NOTES" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
       - name: Create new tag
+        uses: actions/github-script@v3
         env:
           NEW_TAG: ${{ env.NEW_TAG }}
-        uses: actions/github-script@v3
         with:
           github-token: ${{ secrets.RN_BOILERPLATE }}
           script: |
@@ -55,7 +51,6 @@ jobs:
             });
 
       - name: Create Release
-
         id: create_release
         uses: actions/create-release@v1
         env:
