--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,9 @@ jobs:
         run: |
           LAST_TAG=$(git describe --tags --abbrev=0)
           NEW_TAG=${{ env.NEW_TAG }}
-          CHANGELOG=$(git log --pretty=format:"%h - %s (%an)" $LAST_TAG..HEAD)
-          RELEASE_NOTES="**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG%0A%0A$CHANGELOG"
-          echo "RELEASE_NOTES=$RELEASE_NOTES" >> $GITHUB_ENV
+          CHANGELOG=$(git log --pretty=format:"%h - %s (%an)" $LAST_TAG..HEAD | base64)
+          RELEASE_NOTES="**Full Changelog**: https://github.com/${{ github.repository }}/compare/$LAST_TAG...$NEW_TAG%0A%0A$(echo $CHANGELOG | base64 --decode)"
+          echo "RELEASE_NOTES=$(echo "$RELEASE_NOTES" | base64)" >> $GITHUB_ENV
 
       - name: Create new tag
         uses: actions/github-script@v3
