--- a/template/package.json
+++ b/template/package.json
@@ -9,12 +9,12 @@
     "start": "react-native start",
     "test": "jest --verbose",
     "coverage": "jest --coverage",
-    "prepare": "npx husky install",
+    "prepare": "npx husky",
     "commit": "npx git-cz"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
