--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20"
+          registry-url: "https://registry.npmjs.org"
 
       - name: Checkout code
         uses: actions/checkout@v2
